# google-bigquery-data-modeller

./: .gitignore  LICENSE.md  README.md  compile.py  install.sh  pyproject.toml  requirements.txt
configuration/: configuration.json  deployment.json
metrics/select_1/: select_101.json  select_101.sql.j2
metrics/select_101_include/: select_101_include.sql.j2
