[tool.poetry]
name = "google-bigquery-data-modeller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "*"
argparse = "*"
google-cloud-bigquery  = "*"
clint  = "*"
pyfiglet  = "*"
pygments = "*"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
