[tool.poetry]
name = "google-bigquery-data-modeller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "2.10.3"
argparse = "1.4.0"
google-cloud-bigquery = "1.24.0"
clint = "0.5.1"
pyfiglet = "0.8.post1"
pygments = "2.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
